fix buttons alignment

--- a/src/modules/buttons/Button.scss
+++ b/src/modules/buttons/Button.scss
@@ -11,6 +11,19 @@
     user-select: none;
     cursor: pointer;
 
+    &s__wrapper {
+        display: flex;
+        margin-left: 10px;
+
+        .j-button {
+            margin-left: 10px;
+
+            &:first-child {
+                margin-left: 0;
+            }
+        }
+    }
+
     &--primary,
     &--danger {
         border-color: transparent;
